--- a/Sheetal.css
+++ b/Sheetal.css
@@ -4,9 +4,10 @@
 /* .selector-for-some-widget {
     box-sizing: content-box;
   } */
+ 
   .mainBar{
       display: flex;
-
+      width: 100vw;
   }
 .main-container{
     width: 100%;
@@ -14,6 +15,13 @@
 }  
 body{
     margin: 0;
+}
+.search-btn{
+    background-color: rgb(165, 161, 161);
+    border-radius: 5px;
+}
+.search-btn:hover{
+    background-color: rgb(119, 116, 116);
 }
 .ul{
     list-style-type: none;
@@ -39,9 +47,12 @@ body{
     color: white;
 
 } */
+.inpt{
+    margin: 0 5px 0 5px;
+}
 .Term{
-    padding-left: 125px;
-    padding-right: 20px;
+    padding-left: 95px;
+    margin-right: 20px;
 }
 input{
     border-radius: 5px;
@@ -102,8 +113,144 @@ a:link{
 .logo{
     cursor: pointer;
 }
-@media only screen and (max-width: 1200px){
+.Sitting{
+    display: flex;
+}
+h4{
+margin-top: 60px;
+padding: 20px;
+}
+.Sitting-img{
+    border-radius: 5px;
+    margin-top: 60px;
+    margin-right: 10px;
+    box-shadow: 4px 4px 4px 4px;
+}
+.item1 { grid-area: header;
+font-size: medium;
+margin-left: 10px;
+}
+.item2 { grid-area: menu; 
+    font-size: medium;
+}
+.item3 { grid-area: main; 
+    font-size: medium;
+}
+.item4 { grid-area: right; 
+    font-size: small;
+    margin-right: 10px;
+}
+
+.grid-container {
+  display: flex;
+  gap: 10px;
+  background-color: rgba(42, 41, 41, 1);
+  padding-top: 10px;
+}
+
+.grid-container > div {
+  /* background-color: rgba(42, 41, 41, 0.8); */
+  text-align: left;
+  color: white;
+  padding: 20px 0;
+  font-size: 30px;
+  width: 100%;
+  
+}
+.copyright-container{
+    background-color: rgba(42, 41, 41, 1);
+    text-align: center;
+    color: white;
+    padding: 20px 0;
+    font-size: 15px;
+    width: 100%;
+    border-top: solid 6px rgba(62, 60, 60, 0.8);
+    
+}
+
+li{
+    list-style-type: none;
+    font-size: large;
+}
+
+
+.mySlides {display: none;}
+
+/* img {vertical-align: middle;} */
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+ 
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 10px;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    text-align: center;
+  }
+  
+  .active {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 2s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+ 
+ .footer{
+     margin-top: 20px;
+ }
+ .imagedots{
+     display: block;
+    text-align: center;
+ }
+
+ @media only screen and (max-width: 2560px){
     /*Tablets [768px -> 1200px]*/
+    .numbertext {
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 10px;
+      }
+    .Sitting-img{
+        border-radius: 5px;
+        margin-top: 60px;
+        margin-right: 10px;
+        box-shadow: 4px 4px 4px 4px;
+        width: 1000px;
+    }
+    h4{
+        font-size: xx-large;
+    }
     .bar{
         color: #E0231A;
         font-size: large;
@@ -131,13 +278,25 @@ a:link{
     }
     .bar-container{
         /* margin-left: 680px; */
-        margin-left: 35vw;
+        margin-left: 45vw;
         margin-top: 20px;
         display: flex;
+        }
+        .Term{
+            padding-left: 51vw;
+            margin-right: 20px;
+        }
+        .grid-container{
+            display: flex;
         }
 }
-@media only screen and (max-width: 768px){
-    /*Tablets [601px -> 1200px]*/
+
+ @media only screen and (max-width: 1440px){
+    /*Tablets [768px -> 1440px]*/
+    .main-bar{
+        display: flex;
+       
+    }
     .bar{
         color: #E0231A;
         font-size: large;
@@ -165,21 +324,295 @@ a:link{
     }
     .bar-container{
         /* margin-left: 680px; */
-        margin-left: 12vw;
+        margin-left: 52vw;
         margin-top: 20px;
         display: flex;
         }
+        .Term{
+            padding-left: 11.5vw;
+            margin-right: 20px;
+            /* margin-right: 20px; */
+        }
+        .mainBar{
+            display: flex;
+            width: 98.7vw;
+        }
+}
+
+@media only screen and (max-width: 1366px){
+    /*Tablets [1200px -> 1366px]*/
+    .main-bar{
+        display: flex;
+ 
+    }
+    h4{
+        font-size: x-large;
+    }
+    .Sitting-img{
+        border-radius: 5px;
+        margin-top: 60px;
+        margin-right: 10px;
+        box-shadow: 4px 4px 4px 4px;
+        width: 602px;
+    }
+    .bar{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        margin: 0 0 0 8px;
+        margin-right: 3px;
+    
+    }
+    .bar1{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        /* margin: 0 0 0 10px; */
+        /* margin-right: 5px; */
+    
+    }
+    .button{
+        color: #E0231A !important;
+        font-size: large !important;
+        font-weight: 700 !important;
+        font-family: "Montserrat",sans-serif !important;  
+        padding-top: 0px !important;
+    }
+    .bar-container{
+        /* margin-left: 680px; */
+        margin-left: 48vw;
+        margin-top: 20px;
+        display: flex;
+        }
+        .Term{
+            padding-left: 6vw;
+            margin-right: 20px;
+        }
+        .mainBar{
+            display: flex;
+            width: 98.7vw;
+        }
+}
+
+@media only screen and (max-width: 1200px){
+    /*Tablets [1024px -> 1200px]*/
+    .bar{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        margin: 0 0 0 8px;
+        margin-right: 3px;
+    
+    }
+    .bar1{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        /* margin: 0 0 0 10px; */
+        /* margin-right: 5px; */
+    
+    }
+    .button{
+        color: #E0231A !important;
+        font-size: large !important;
+        font-weight: 700 !important;
+        font-family: "Montserrat",sans-serif !important;  
+        padding-top: 0px !important;
+    }
+    .bar-container{
+        /* margin-left: 680px; */
+        margin-left: 42vw;
+        margin-top: 20px;
+        display: flex;
+        }
+        .Term{
+            padding-left: 4vw;
+            margin-right: 20px;
+        }
+        .mainBar{
+            display: flex;
+            width: 98.6vw;
+        }
+        .inpt{
+            margin: 0 5px 0 5px;
+            width: 7.5vw;
+        }
+        h2{
+            font-size: x-large;
+        }
+        .search-btn{
+            background-color: rgb(165, 161, 161);
+            border-radius: 5px;
+        }
+        .search-btn:hover{
+            background-color: rgb(119, 116, 116);
+        }
+        .li{
+            margin: 0.5px;
+            line-height: inherit;
+            border-left: 1px solid rgba(141,142,144,0.5);
+            font-size: 14px;
+            font-family: "Montserrat",sans-serif;
+            background-color: #E0231A;
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+        }
+}
+
+@media only screen and (max-width: 1024px){
+    /*Tablets [768px -> 1024px]*/
+
+    .main-bar{
+        display: flex;
+    }
+    .bar{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        margin: 0 0 0 8px;
+        margin-right: 3px;
+    }
+    .bar1{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        /* margin: 0 0 0 10px; */
+        /* margin-right: 5px; */
+    }
+    .button{
+        color: #E0231A !important;
+        font-size: large !important;
+        font-weight: 700 !important;
+        font-family: "Montserrat",sans-serif !important;  
+        padding-top: 0px !important;
+    }
+    .bar-container{
+        /* margin-left: 680px; */
+        margin-left: 33vw;
+        margin-top: 20px;
+        display: flex;
+        }
+        .Term{
+            padding-left: 10vw;
+            margin-right: 20px;
+        }
+        .mainBar{
+            display: flex;
+            width: 98vw;
+        }
+        .inpt{
+            margin: 0 5px 0 5px;
+            width: 12vw;
+        }
+        h4{
+            margin-top: 20px;
+            padding: 20px;
+            font-size: 22px;
+            }
+            .Sitting-img{
+                border-radius: 5px;
+                margin-top: 20px;
+                margin-right: 10px;
+                box-shadow: 4px 4px 4px 4px;
+            }
+}
+
+@media only screen and (max-width: 768px){
+    /*Tablets [601px -> 768px]*/
+    li{
+        font-size: 10px;
+    }
+    .bar{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        margin: 0 0 0 8px;
+        margin-right: 3px;
+    
+    }
+    .bar1{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 700;
+        font-family: "Montserrat",sans-serif;
+        /* margin: 0 0 0 10px; */
+        /* margin-right: 5px; */
+    
+    }
+    .bar-container{
+        /* margin-left: 680px; */
+        margin-left: 5vw !important;
+        margin-top: 20px;
+        display: flex;
+        }
+    .button{
+        color: #E0231A !important;
+        font-size: large !important;
+        font-weight: 700 !important;
+        font-family: "Montserrat",sans-serif !important;  
+        padding-top: 0px !important;
+    }
+        .bar-container{
+            /* margin-left: 680px; */
+            margin-left: 12vw;
+            margin-top: 20px;
+            display: flex;
+            }
+            .Term{
+                padding-left: 3vw;
+                margin-right: 20px;
+            }
+            .mainBar{
+                display: flex;
+                width: 97vw;
+            }
+            .inpt{
+                margin: 0 5px 0 5px;
+                width: 12vw;
+            }
+            h4{
+                margin-top: 20px;
+                padding: 20px;
+                font-size: 22px;
+                }
+                .Sitting-img{
+                    border-radius: 5px;
+                    margin-top: 15px;
+                    margin-left: 80px;
+                    box-shadow: 4px 4px 4px 4px;
+                }
+                .Sitting{
+                    display: block;
+                }
+                h2{
+                    font-size: 15px;
+                }
+                .copyright-container{
+                    font-size: 12px;
+                 }
 }
 @media only screen and (max-width: 600px){
 	/*Big smartphones [426px -> 600px]*/
     .bar{
         color: #E0231A;
-        font-size: large;
+        font-size: large !important;
         font-weight: 600;
         font-family: "Montserrat",sans-serif;
         margin: 0 0 0 8px;
         margin-right: 3px;
     
+    }
+    .logo{
+        width: 100px;
+        height: 60;
     }
     .bar1{
         color: #E0231A;
@@ -199,9 +632,24 @@ a:link{
     }
     .bar-container{
         /* margin-left: 680px; */
-        margin-left: 25vw;
+        margin-left: 1vw;
         margin-top: 20px;
         display: flex;
+        }
+        .Term{
+            padding-left: 20vw;
+            margin-right: 10px;
+        }
+        .Sitting-img{
+            border-radius: 5px;
+            margin-top: 15px;
+            width: 580px;
+            box-shadow: 4px 4px 4px 4px;
+            margin-left: 0;
+        }
+        .inpt{
+            margin: 0 5px 0 5px;
+            width: 25vw;
         }
 }
 @media only screen and (max-width: 425px){
@@ -214,6 +662,10 @@ a:link{
         margin: 0 0 0 8px;
         margin-right: 3px;
     
+    }
+    .logo{
+        width: 90px;
+        height: 90px !important;
     }
     .bar1{
         color: #E0231A;
@@ -233,8 +685,9 @@ a:link{
     }
     .mainBar{
         display: block;
-  
+        width: 95.5vw;
     }
+
     .ul{
         list-style-type: none;
         display: block;
@@ -245,9 +698,44 @@ a:link{
     }
     .bar-container{
         /* margin-left: 680px; */
-        margin-left: 15vw;
+        margin-left: 2vw;
         margin-top: 20px;
-        display: block;
+        display: flex;
+       
+        }
+        .copyright-container{
+           font-size: 12px;
+        }
+        .grid-container {
+            display: block;
+            gap: 5px;
+            background-color: rgba(42, 41, 41, 1);
+            padding-top: 5px;
+            width: 98%;
+
+          }
+          .Sitting-img{
+            border-radius: 5px;
+            margin-top: 15px;
+            width: 380px;
+            box-shadow: 4px 4px 4px 4px;
+            margin-left: 0;
+        }
+        .copyright-container{
+            background-color: rgba(42, 41, 41, 1);
+            text-align: center;
+            color: white;
+            padding: 20px 0;
+            font-size: 15px;
+            width: 98%;
+            border-top: solid 6px rgba(62, 60, 60, 0.8);
+            
+        }
+        .item3{
+            margin-left: 10px;
+        }
+        .item4{
+            margin-left: 10px;
         }
 }
 @media only screen and (min-width: 577px) and (max-width: 720px) {
@@ -288,4 +776,182 @@ a:link{
         /* flex-wrap: wrap; */
         margin-top: 0;
     }
+}
+@media only screen and (max-width: 375px){
+	/*Small smartphones [325px -> 425px]*/
+    .bar{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 400;
+        font-family: "Montserrat",sans-serif;
+        margin: 0 0 0 8px;
+        margin-right: 3px;
+    
+    }
+    .logo{
+        width: 90px;
+        height: 90px !important;
+    }
+    .bar1{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 400;
+        font-family: "Montserrat",sans-serif;
+        /* margin: 0 0 0 10px; */
+        /* margin-right: 5px; */
+    
+    }
+    .button{
+        color: #E0231A !important;
+        font-size: large !important;
+        font-weight: 400 !important;
+        font-family: "Montserrat",sans-serif !important;  
+        padding-top: 0px !important;
+    }
+    .mainBar{
+        display: block;
+        width: 95.5vw;
+    }
+
+    .ul{
+        list-style-type: none;
+        display: block;
+        padding-left: 0;
+        margin-bottom: 0;
+        /* flex-wrap: wrap; */
+        margin-top: 0;
+    }
+    .bar-container{
+        /* margin-left: 680px; */
+        margin-left: 2vw;
+        margin-top: 20px;
+        display: flex;
+       
+        }
+        .copyright-container{
+           font-size: 12px;
+        }
+        .grid-container {
+            display: block;
+            gap: 5px;
+            background-color: rgba(42, 41, 41, 1);
+            padding-top: 5px;
+            width: 98%;
+
+          }
+          .Sitting-img{
+            border-radius: 5px;
+            margin-top: 15px;
+            width: 340px;
+            box-shadow: 4px 4px 4px 4px;
+            margin-left: 0;
+        }
+        .copyright-container{
+            background-color: rgba(42, 41, 41, 1);
+            text-align: center;
+            color: white;
+            padding: 20px 0;
+            font-size: 8px;
+            width: 98%;
+            border-top: solid 6px rgba(62, 60, 60, 0.8);
+            
+        }
+    
+        .Term{
+            padding-left: 1vw;
+            margin-right: 10px;
+        }
+        .inpt{
+            margin: 0 5px 0 5px;
+            width: 30vw;
+        }
+}
+@media only screen and (max-width: 320px){
+	/*Small smartphones [325px -> 425px]*/
+    .bar{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 400;
+        font-family: "Montserrat",sans-serif;
+        margin: 0 0 0 8px;
+        margin-right: 3px;
+    
+    }
+    .logo{
+        width: 90px;
+        height: 90px !important;
+    }
+    .bar1{
+        color: #E0231A;
+        font-size: large;
+        font-weight: 400;
+        font-family: "Montserrat",sans-serif;
+        /* margin: 0 0 0 10px; */
+        /* margin-right: 5px; */
+    
+    }
+    .button{
+        color: #E0231A !important;
+        font-size: large !important;
+        font-weight: 400 !important;
+        font-family: "Montserrat",sans-serif !important;  
+        padding-top: 0px !important;
+    }
+    .mainBar{
+        display: block;
+        width: 95.5vw;
+    }
+
+    .ul{
+        list-style-type: none;
+        display: block;
+        padding-left: 0;
+        margin-bottom: 0;
+        /* flex-wrap: wrap; */
+        margin-top: 0;
+    }
+    .bar-container{
+        /* margin-left: 680px; */
+        margin-left: 2vw;
+        margin-top: 20px;
+        display: flex;
+       
+        }
+        .copyright-container{
+           font-size: 12px;
+        }
+        .grid-container {
+            display: block;
+            gap: 5px;
+            background-color: rgba(42, 41, 41, 1);
+            padding-top: 5px;
+            width: 98%;
+
+          }
+          .Sitting-img{
+            border-radius: 5px;
+            margin-top: 15px;
+            width: 280px;
+            box-shadow: 4px 4px 4px 4px;
+            margin-left: 0;
+        }
+        .copyright-container{
+            background-color: rgba(42, 41, 41, 1);
+            text-align: center;
+            color: white;
+            padding: 20px 0;
+            font-size: 8px;
+            width: 98%;
+            border-top: solid 6px rgba(62, 60, 60, 0.8);
+            
+        }
+    
+        .Term{
+            padding-left: 1vw;
+            margin-right: 10px;
+        }
+        .inpt{
+            margin: 0 5px 0 5px;
+            width: 30vw;
+        }
 }
