--- a/Sheetal.css
+++ b/Sheetal.css
@@ -303,6 +303,9 @@
             display: flex;
      
         }
+        .barH{
+        font-size: xx-large;
+        }
         h4{
             font-size: xx-large;
         }
@@ -312,6 +315,10 @@
             margin-right: 0px;
             box-shadow: 4px 4px 4px 4px;
             max-width: 50vw;
+        }
+        .Sitting{
+            width: 100%;
+            padding: 10px;
         }
         .bar{
             color: #E0231A;
@@ -349,7 +356,7 @@
             }
             .mainBar{
                 display: flex;
-                width: 100vw;
+                width: 100%;
             }
     }
     
@@ -676,7 +683,7 @@
         }
         .mainBar{
             display: block;
-            width: 98.2vw;
+            width: 100%;
         }
         .barH{
             font-size: 15px;
@@ -702,21 +709,18 @@
             display: flex;
            
             }
-            .copyright-container{
-               font-size: 12px;
-            }
             .grid-container {
                 display: block;
                 gap: 5px;
                 background-color: rgba(42, 41, 41, 1);
                 padding-top: 5px;
-                width: 98%;
+                width: 100%;
     
               }
               .Sitting-img{
                 border-radius: 5px;
                 margin-top: 15px;
-                width: 580px;
+                width: 100%;
                 box-shadow: 4px 4px 4px 4px;
                 margin-left: 110px;
             }
@@ -724,9 +728,9 @@
                 background-color: rgba(42, 41, 41, 1);
                 text-align: center;
                 color: white;
-                padding: 20px 0;
+                padding: 20px 10px;
                 font-size: 15px;
-                width: 98%;
+                width: 100%;
                 border-top: solid 6px rgba(62, 60, 60, 0.8);
                 
             }
@@ -734,6 +738,15 @@
                 padding-left: 20vw;
                 margin-right: 10px;
             }
+            .Footer{
+                width: 100%;
+            }
+            .slideshow-container{
+                width: 100%;
+                }
+                .item1{
+                margin-left: 0;
+                }
     }
     /* @media only screen and (min-width: 577px) and (max-width: 720px) {
         .bar{
@@ -887,7 +900,7 @@
         }
         .mainBar{
             display: block;
-            width: 98.3vw;
+            width: 100%;
         }
     
         .ul{
@@ -908,18 +921,19 @@
             }
             .grid-container {
                 display: block;
-                gap: 5px;
+                gap: 3px;
                 background-color: rgba(42, 41, 41, 1);
                 padding-top: 5px;
-                width: 98%;
+                width: 100%;
     
               }
               .Sitting-img{
                 border-radius: 5px;
                 margin-top: 15px;
-                width: 380px;
+                width: 550px;
+                height: 150px;
                 box-shadow: 4px 4px 4px 4px;
-                margin-left: 80px;
+                margin-left: 68px;
             }
             .copyright-container{
                 background-color: rgba(42, 41, 41, 1);
@@ -927,7 +941,7 @@
                 color: white;
                 padding: 20px 0;
                 font-size: 8px;
-                width: 98%;
+                width: 100%;
                 border-top: solid 6px rgba(62, 60, 60, 0.8);
                 
             }
@@ -939,5 +953,17 @@
             .inpt{
                 margin: 0 5px 0 5px;
                 width: 30vw;
+            }
+            h4{
+                font-size: larger;
+            }
+            .Footer{
+                width: 100%;
+            }
+            .slideshow-container{
+            width: 100%;
+            }
+            .item1{
+            margin-left: 0;
             }
     }
